--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body {
 
 ::-webkit-scrollbar {
   width: 6px;
+  height: 6px;
   background: #f5f5f5;
   border-radius: 8px;
 }
